updates on information on me

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
-<body>
+
+    <body>
 
     <div id="loading-screen">
         <div class="logo">QB</div>
@@ -196,11 +197,11 @@
         <section class="slide">
             <div class="slide-content">
                 <h2>The Founder</h2>
-                <div class="team-grid" style="grid-template-columns: 1fr; max-width: 450px; margin: 2rem auto;">
+                <div class="team-grid" style="grid-template-columns: 1fr; max-width: 550px; margin: 2rem auto;">
                     <div class="team-member">
-                        <div class="avatar-placeholder">ME</div>
-                        <h3>[Your Name]</h3>
-                        <p>A product-focused developer with a passion for data accessibility. Skilled in building user-centric solutions to complex technical problems, with experience in both full-stack engineering and product strategy.</p>
+                        <div class="avatar-placeholder">DMG</div>
+                        <h3>Deku Mawuli Gbedzeha</h3>
+                        <p>A product-focused developer with deep expertise in building LLM-powered applications. I integrate the best of software engineering and generative AI to deliver reliable, resilient, and user-centric solutions to complex data problems.</p>
                     </div>
                 </div>
             </div>
@@ -240,4 +241,5 @@
     </div>
 
 </body>
+
 </html>
